fixed cog walk image responsiveness on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -253,6 +253,11 @@ iframe {
 	margin: auto;
 }
 
+#cogwalk {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 button.btn a {
 	font-size: 12px;	
 }
